--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
-        "axios": "^0.19",
-        "bootstrap": "^5.0.0",
+        "axios": "^0.21.1",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
@@ -26,6 +25,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.5.4",
+        "bootstrap": "^5.0.0-beta1",
         "react-router-dom": "^5.2.0"
     }
 }
