--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@popperjs/core": "^2.5.4",
         "bootstrap": "^5.0.0-beta1",
+        "bootstrap-icons": "^1.4.0",
         "react-router-dom": "^5.2.0"
     }
 }
